--- a/7.HighQualityCode/20.ExamPreparation/Phonebook-Solution/ConsoleApplication1/Phonebook.csproj
+++ b/7.HighQualityCode/20.ExamPreparation/Phonebook-Solution/ConsoleApplication1/Phonebook.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C199ACE6-A460-4ECD-821D-1BCA03B8DD94}</ProjectGuid>
+    <ProjectGuid>{D60D857E-37F2-4205-BAB5-EE3C4B7B1911}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AbstractFactory</RootNamespace>
-    <AssemblyName>AbstractFactory</AssemblyName>
+    <RootNamespace>Phonebook</RootNamespace>
+    <AssemblyName>ConsoleApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,11 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Owin">
-      <HintPath>..\packages\Microsoft.Owin.2.0.0-rc1\lib\net45\Microsoft.Owin.dll</HintPath>
-    </Reference>
-    <Reference Include="Owin">
-      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    <Reference Include="PowerCollections">
+      <HintPath>..\packages\XAct.Wintellect.PowerCollections.0.0.1\lib\net20\PowerCollections.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,22 +44,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract factory example - pizza place\AbstractPizzaFactory.cs" />
-    <Compile Include="Abstract factory example - pizza place\AlfreddosPlace.cs">
-      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
-    </Compile>
-    <Compile Include="Abstract factory example - pizza place\Calzone.cs" />
-    <Compile Include="Abstract factory example - pizza place\CheesePizza.cs" />
-    <Compile Include="Abstract factory example - pizza place\OnlineDeliveryCompany.cs" />
-    <Compile Include="Abstract factory example - pizza place\PepperoniPizza.cs" />
-    <Compile Include="Abstract factory example - pizza place\Pizza.cs" />
-    <Compile Include="Abstract factory example - pizza place\PizzaExtraordinaire.cs" />
-    <Compile Include="Abstract factory example - pizza place\Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CommandFactoryWithLazyLoading.cs" />
+    <Compile Include="CommandInfo.cs" />
+    <Compile Include="CommandParser.cs" />
+    <Compile Include="Command\RemovePhoneCommand.cs" />
+    <Compile Include="ConsolePrinterVisitorWithNewLine.cs" />
+    <Compile Include="ConsolePrinterVisitorWithoutNewLine.cs" />
+    <Compile Include="ICommandFactory.cs" />
+    <Compile Include="ICommandParser.cs" />
+    <Compile Include="IDeletablePhonebookRepository.cs" />
+    <Compile Include="IPrinterVisitor.cs" />
+    <Compile Include="PhoneEntry.cs" />
+    <Compile Include="Command\AddPhoneCommand.cs" />
+    <Compile Include="Command\ChangePhoneCommand.cs" />
+    <Compile Include="Command\IPhonebookCommand.cs" />
+    <Compile Include="Command\ListPhonesCommand.cs" />
+    <Compile Include="IPhonebookRepository.cs" />
+    <Compile Include="IPhoneNumberSanitizer.cs" />
+    <Compile Include="IPrinter.cs" />
+    <Compile Include="PhonebookEntryPoint.cs" />
+    <Compile Include="PhonebookSanitizer.cs" />
+    <Compile Include="PhonebookRepositoryWithDictionary.cs" />
+    <Compile Include="StringBuilderPrinter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Abstract factory example - pizza place\Abstract factory diagram.cd" />
-    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
